[gd_scene load_steps=2 format=3 uid="uid://dxn3vycwgj1u7"]

[ext_resource type="Script" uid="uid://cumhbxtvjisbw" path="res://scripts/ui/menus/MainMenu.gd" id="1_s63no"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s63no")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Soccer Psychology Manager"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="NewCareerButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
text = "New Career"

[node name="LoadCareerButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
text = "Load Career"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
text = "Exit"
